// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Least frequently used: \`Destroyable\` implementation 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  50,
  51,
  52,
  53,
  54,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
]
`;

exports[`Least frequently used: Zero cap 1`] = `"Capacity can't be equal to zero"`;

exports[`Least frequently used: basic workflow 1`] = `
[
  0,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
]
`;

exports[`Least frequently used: memoization: \`leavesPerStorageLimit\` 1`] = `[]`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 1`] = `[]`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 2`] = `[]`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 3`] = `
[
  "0-3",
  "0-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 4`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 5`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 6`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 7`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 8`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 9`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit = 2\` 10`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
  "7-3",
  "3-0",
  "3-1",
  "7-2",
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit\` 1`] = `[]`;

exports[`Least frequently used: memoization: \`totalLeavesLimit\` 2`] = `
[
  0,
  10,
]
`;

exports[`Least frequently used: memoization: \`totalLeavesLimit\` 3`] = `
[
  0,
  10,
  0,
  10,
  11,
  12,
  13,
]
`;

exports[`Least frequently used: memoization: \`totalStoragesLimit\` 1`] = `
[
  0,
]
`;

exports[`Least frequently used: memoization: \`totalStoragesLimit\` 2`] = `
[
  0,
  1,
  10,
  1,
]
`;

exports[`Least frequently used: memoization: \`totalStoragesLimit\` 3`] = `
[
  0,
  1,
  10,
  1,
  0,
  10,
  11,
  12,
  13,
]
`;
